--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,16 +12,20 @@
   "packageManager": "pnpm@10.24.0",
   "dependencies": {
     "@fastify/cors": "^11.2.0",
+    "@fastify/oauth2": "^8.1.2",
+    "argon2": "^0.44.0",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "fastify": "^5.7.2",
     "fastify-type-provider-zod": "^6.1.0",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
     "viem": "^2.45.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.10",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
