Upgraded backend to correlate with doc. Removed seperate webhook endpoint shown in docs to match with webhooks inside subscriptions

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -35,3 +35,10 @@ GITHUB_CLIENT_SECRET=your-github-client-secret
 
 # Frontend URL (for OAuth redirects after authentication)
 FRONTEND_URL=http://localhost:5173
+
+# Resend API (for email notifications)
+# 1. Go to https://resend.com and create an account
+# 2. Get your API key from the dashboard
+# 3. Verify your domain (cyberpunkinc.xyz) in Resend settings
+# Leave blank to disable email notifications
+RESEND_API_KEY=re_xxxxxxxxxx
